work on file structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,15 @@
-# Created by https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=react,visualstudiocode
-
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
-
+# dependencies
 node_modules
-bower_components
 
-*.sublime*
+# sst
+.sst
+.build
 
-psd
-thumb
-sketch
+# opennext
+.open-next
 
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+# misc
+.DS_Store
 
-# Local History for Visual Studio Code
-.history/
-
-# Built Visual Studio Code Extensions
-*.vsix
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-.ionide
-
-# End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
+# local env files
+.env*.local
