--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ServerlessStack/functions",
+  "name": "@ArtHandler/core",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -7,9 +7,11 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1",
-    "@types/aws-lambda": "^8.10.119",
     "vitest": "^0.32.2",
+    "@types/node": "^20.3.1",
     "sst": "^2.13.6"
+  },
+  "dependencies": {
+    "zod": "^3.21.4"
   }
 }
