--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ServerlessStack/core",
+  "name": "@ArtHandler/functions",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -7,11 +7,9 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^0.32.2",
     "@types/node": "^20.3.1",
+    "@types/aws-lambda": "^8.10.119",
+    "vitest": "^0.32.2",
     "sst": "^2.13.6"
-  },
-  "dependencies": {
-    "zod": "^3.21.4"
   }
 }
