--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ArtHandler/functions",
+  "name": "@arthandler/functions",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -7,9 +7,12 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1",
     "@types/aws-lambda": "^8.10.119",
-    "vitest": "^0.32.2",
-    "sst": "^2.13.6"
+    "@types/node": "^20.3.1",
+    "sst": "^2.13.6",
+    "vitest": "^0.32.2"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1399.0"
   }
 }
