--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.13.6",
+    "@tsconfig/node16": "^1.0.4",
     "aws-cdk-lib": "2.79.1",
     "constructs": "10.1.156",
-    "typescript": "^5.1.3",
-    "@tsconfig/node16": "^1.0.4"
+    "sst": "^2.13.6",
+    "typescript": "^5.1.3"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "flowbite": "^1.6.6"
+  }
 }
