--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "sst dev",
-    "build": "sst build",
-    "deploy": "sst deploy",
-    "remove": "sst remove",
-    "console": "sst console",
+    "dev": "sst dev --aws-profile ArtHandlerDev",
+    "build": "sst build --profile ArtHandlerDev",
+    "deploy": "sst deploy --profile ArtHandlerDev",
+    "remove": "sst remove --profile ArtHandlerDev",
+    "console": "sst console --profile ArtHandlerDev",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
