--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "packages/*"
   ],
   "dependencies": {
-    "flowbite": "^1.6.6"
+    "flowbite": "^1.6.6",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "react-router-dom": "^6.13.0",
+    "sort-by": "^1.2.0"
   }
 }
