--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,6 +13,7 @@
     "vitest": "^0.32.2"
   },
   "dependencies": {
-    "aws-sdk": "^2.1399.0"
+    "aws-sdk": "^2.1399.0",
+    "bcrypt": "^5.1.0"
   }
 }
