--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1399.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "uuid": "^9.0.0"
   }
 }
