--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,7 +15,7 @@
     "flowbite-react": "^0.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sst": "^2.13.6"
+    "sst": "2.24.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
