--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.4",
-    "aws-cdk-lib": "2.79.1",
-    "constructs": "10.1.156",
-    "sst": "^2.13.6",
+    "aws-cdk-lib": "2.91.0",
+    "constructs": "10.2.69",
+    "sst": "2.24.3",
     "typescript": "^5.1.3"
   },
   "workspaces": [
