--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "vitest": "^0.32.2",
     "@types/node": "^20.3.1",
-    "sst": "^2.13.6"
+    "sst": "2.24.3"
   },
   "dependencies": {
     "zod": "^3.21.4"
